# STR

./: CMakeLists.txt
TAREA I/: buttons.c  buttons.h  config.h  main.c  ntc.c  ntc.h  rgb.c  rgb.h  uart_manager.c  uart_manager.h
TAREA II/: ledc_basic_example_main.c  library_led_c.c  library_led_c.h
TAREA III/: fan.c  fan.h  main.c  ntc.c  ntc.h  ota.c  ota.h  rgb.c  rgb.h  servo.c  servo.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
